# unity_robotics_env

./: .gitignore  README.md  client.py  configs.yaml  hclient.py  hserver.py  interface.Dockerfile  mission_control.yml  server.py  testUnityServ.py
robotics_demo/: CMakeLists.txt
robotics_demo/data/UR5/obs_act_etc/2/: data.npz
robotics_demo/data/UR5/obs_act_etc/3/: data.npz
robotics_demo/msg/: AchievedGoal.msg  FullState.msg  Goal.msg  ImageTest.msg  JointPositions.msg  Observation.msg  PosRot.msg  PositionCommand.msg  ProprioceptiveState.msg  QuaternionProprioState.msg  RPYProprioState.msg  RPYState.msg  Reengage.msg  ReplayInfo.msg  ResetAngles.msg  ResetInfo.msg  TimerBeat.msg  ToRecord.msg  Velocities.msg
robotics_demo/scripts/: ControlCentre.ipynb  Untitled.ipynb  VRControllerController.cs  cmder.py  color_publisher.py  consolidate_state.py  core_logic.py  core_logic_envHz.py  core_logic_srv.py  np_to_multiarray.py  recorder.py  server_endpoint.py  shadow_arm.py  tests.py  timer_loop.py  utils.py  xyz_quat_g_to_xyz_rpy_g.py  xyz_rpy_g_to_joints.py
robotics_demo/scripts/.ipynb_checkpoints/: ControlCentre-checkpoint.ipynb  DataCleanup-checkpoint.ipynb
robotics_demo/scripts/ur5v2/: ur5_robot.urdf
robotics_demo/scripts/ur5v2/meshes/ur10/collision/: base.prefab  forearm.prefab  shoulder.prefab  upper_arm.prefab  wrist_1.prefab  wrist_2.prefab  wrist_3.prefab
robotics_demo/scripts/ur5v2/meshes/ur5/collision/: base.prefab  (+10 more)
robotics_demo/srv/: CheckPose.srv  act.srv  getIK.srv  getState.srv  getTime.srv  reset.srv
robotics_demo/storage/: GUIController.cs
(+89 files in other folders)
